--- a/css/flat-ui.css
+++ b/css/flat-ui.css
@@ -3964,6 +3964,8 @@ background-color:#8e44ad;
     -moz-box-shadow: 0 0 5px 5px #888;
 -webkit-box-shadow: 0 0 5px 5px#888;
 box-shadow: 0 0 5px 5px #888;
+
+    position: relative;
 }
 .foto-perfil{
     border:2px solid #BFC9CA;
