--- a/css/kids.css
+++ b/css/kids.css
@@ -54,58 +54,58 @@
 
 /*ATRIL*/
 .atril{
-    background-image: url("../images/kids/sprites/atril.png");
+    background-image: url("../images/kids/sprites/atril5.png");
     bottom: 80px;
     cursor: pointer;
-    height: 130px;
+    height: 131px;
     left: 361px;
     position: absolute;
-    width: 80px;
+    width: 62px;
     z-index: 99999999;
 }
 .atrilmove{
-     animation: 5s steps(60, end) 0s normal none infinite playatril;   
-     -webkit-animation: playatril 5s steps(60) infinite;
-       -moz-animation:  playatril 5s steps(60) infinite;
-        -ms-animation:  playatril 5s steps(60) infinite;
-         -o-animation:  playatril 5s steps(60) infinite;
-            animation:  playatril 5s steps(60) infinite;
+     animation: 5s steps(59, end) 0s normal none infinite playatril;   
+     -webkit-animation: playatril 5s steps(59) infinite;
+       -moz-animation:  playatril 5s steps(59) infinite;
+        -ms-animation:  playatril 5s steps(59) infinite;
+         -o-animation:  playatril 5s steps(59) infinite;
+            animation:  playatril 5s steps(59) infinite;
 }
-
+7476
 @-webkit-keyframes playatril {
    from { background-position:    0px 0px; }
-     to { background-position: -4720px 0px; }
+     to { background-position: 0px -7729px; }
 }
 
 @-moz-keyframes playatril {
    from { background-position:    0px 0px; }
-     to { background-position: -4720px 0px; }
+     to { background-position: 0px -7729px; }
 }
 
 @-ms-keyframes playatril {
    from { background-position:    0px 0px; }
-     to { background-position: -4720px 0px; }
+     to { background-position: 0px -7729px; }
 }
 
 @-o-keyframes playatril {
    from { background-position:    0px 0px; }
-     to { background-position: -4720px 0px; }
+     to { background-position: 0px -7729px; }
 }
 
 @keyframes playatril {
    from { background-position:    0px 0px; }
-     to { background-position: -4720px 0px; }
+     to { background-position: 0px -7729px; }
 }
 /*ATRIL*/
 
 /*LAMP*/
 .lamp{
-    cursor:pointer;
-    background-image: url("../images/kids/sprites/lamp.png");
+      background-image: url("../images/kids/sprites/lamp.png");
+    bottom: 58px;
+    cursor: pointer;
     height: 156px;
-    right: 101px;
     position: absolute;
-    bottom: 260px;
+    right: 340px;
     width: 99px;
     z-index: 99999999;
     
